add a contact annotator example (#6)
* add a contact annotator example

* add a contact annotator example

* add a contact annotator example

* add a contact annotator example
