# server/openapi_server/models/text_contact_annotation.py
@@ -7,38 +7,36 @@ from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
 from openapi_server.models.text_annotation import TextAnnotation
-from openapi_server.models.text_date_annotation_all_of import TextDateAnnotationAllOf
+from openapi_server.models.text_contact_annotation_all_of import TextContactAnnotationAllOf
 from openapi_server import util
 
-from openapi_server.models.text_annotation import TextAnnotation  # noqa: E501
-from openapi_server.models.text_date_annotation_all_of import TextDateAnnotationAllOf  # noqa: E501
-
-class TextDateAnnotation(Model):
+class TextContactAnnotation(Model):
+    
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
-    def __init__(self, start=None, length=None, text=None, confidence=None, date_format=None):  # noqa: E501
-        """TextDateAnnotation - a model defined in OpenAPI
+    def __init__(self, start=None, length=None, text=None, confidence=None, contact_type=None):  # noqa: E501
+        """TextContactAnnotation - a model defined in OpenAPI
 
-        :param start: The start of this TextDateAnnotation.  # noqa: E501
+        :param start: The start of this TextContactAnnotation.  # noqa: E501
         :type start: int
-        :param length: The length of this TextDateAnnotation.  # noqa: E501
+        :param length: The length of this TextContactAnnotation.  # noqa: E501
         :type length: int
-        :param text: The text of this TextDateAnnotation.  # noqa: E501
+        :param text: The text of this TextContactAnnotation.  # noqa: E501
         :type text: str
-        :param confidence: The confidence of this TextDateAnnotation.  # noqa: E501
+        :param confidence: The confidence of this TextContactAnnotation.  # noqa: E501
         :type confidence: float
-        :param date_format: The date_format of this TextDateAnnotation.  # noqa: E501
-        :type date_format: str
+        :param contact_type: The contact_type of this TextContactAnnotation.  # noqa: E501
+        :type contact_type: str
         """
         self.openapi_types = {
             'start': int,
             'length': int,
             'text': str,
             'confidence': float,
-            'date_format': str
+            'contact_type': str
         }
 
         self.attribute_map = {
@@ -46,44 +44,44 @@ class TextDateAnnotation(Model):
             'length': 'length',
             'text': 'text',
             'confidence': 'confidence',
-            'date_format': 'dateFormat'
+            'contact_type': 'contactType'
         }
 
         self._start = start
         self._length = length
         self._text = text
         self._confidence = confidence
-        self._date_format = date_format
+        self._contact_type = contact_type
 
     @classmethod
-    def from_dict(cls, dikt) -> 'TextDateAnnotation':
+    def from_dict(cls, dikt) -> 'TextContactAnnotation':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The TextDateAnnotation of this TextDateAnnotation.  # noqa: E501
-        :rtype: TextDateAnnotation
+        :return: The TextContactAnnotation of this TextContactAnnotation.  # noqa: E501
+        :rtype: TextContactAnnotation
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def start(self):
-        """Gets the start of this TextDateAnnotation.
+        """Gets the start of this TextContactAnnotation.
 
         The position of the first character  # noqa: E501
 
-        :return: The start of this TextDateAnnotation.
+        :return: The start of this TextContactAnnotation.
         :rtype: int
         """
         return self._start
 
     @start.setter
     def start(self, start):
-        """Sets the start of this TextDateAnnotation.
+        """Sets the start of this TextContactAnnotation.
 
         The position of the first character  # noqa: E501
 
-        :param start: The start of this TextDateAnnotation.
+        :param start: The start of this TextContactAnnotation.
         :type start: int
         """
         if start is None:
@@ -93,22 +91,22 @@ class TextDateAnnotation(Model):
 
     @property
     def length(self):
-        """Gets the length of this TextDateAnnotation.
+        """Gets the length of this TextContactAnnotation.
 
         The length of the annotation  # noqa: E501
 
-        :return: The length of this TextDateAnnotation.
+        :return: The length of this TextContactAnnotation.
         :rtype: int
         """
         return self._length
 
     @length.setter
     def length(self, length):
-        """Sets the length of this TextDateAnnotation.
+        """Sets the length of this TextContactAnnotation.
 
         The length of the annotation  # noqa: E501
 
-        :param length: The length of this TextDateAnnotation.
+        :param length: The length of this TextContactAnnotation.
         :type length: int
         """
         if length is None:
@@ -118,22 +116,22 @@ class TextDateAnnotation(Model):
 
     @property
     def text(self):
-        """Gets the text of this TextDateAnnotation.
+        """Gets the text of this TextContactAnnotation.
 
         The string annotated  # noqa: E501
 
-        :return: The text of this TextDateAnnotation.
+        :return: The text of this TextContactAnnotation.
         :rtype: str
         """
         return self._text
 
     @text.setter
     def text(self, text):
-        """Sets the text of this TextDateAnnotation.
+        """Sets the text of this TextContactAnnotation.
 
         The string annotated  # noqa: E501
 
-        :param text: The text of this TextDateAnnotation.
+        :param text: The text of this TextContactAnnotation.
         :type text: str
         """
         if text is None:
@@ -143,22 +141,22 @@ class TextDateAnnotation(Model):
 
     @property
     def confidence(self):
-        """Gets the confidence of this TextDateAnnotation.
+        """Gets the confidence of this TextContactAnnotation.
 
         The confidence in the accuracy of the annotation  # noqa: E501
 
-        :return: The confidence of this TextDateAnnotation.
+        :return: The confidence of this TextContactAnnotation.
         :rtype: float
         """
         return self._confidence
 
     @confidence.setter
     def confidence(self, confidence):
-        """Sets the confidence of this TextDateAnnotation.
+        """Sets the confidence of this TextContactAnnotation.
 
         The confidence in the accuracy of the annotation  # noqa: E501
 
-        :param confidence: The confidence of this TextDateAnnotation.
+        :param confidence: The confidence of this TextContactAnnotation.
         :type confidence: float
         """
         if confidence is None:
@@ -171,24 +169,30 @@ class TextDateAnnotation(Model):
         self._confidence = confidence
 
     @property
-    def date_format(self):
-        """Gets the date_format of this TextDateAnnotation.
+    def contact_type(self):
+        """Gets the contact_type of this TextContactAnnotation.
 
-        Date format (ISO 8601)  # noqa: E501
+        Type of contact information  # noqa: E501
 
-        :return: The date_format of this TextDateAnnotation.
+        :return: The contact_type of this TextContactAnnotation.
         :rtype: str
         """
-        return self._date_format
+        return self._contact_type
 
-    @date_format.setter
-    def date_format(self, date_format):
-        """Sets the date_format of this TextDateAnnotation.
+    @contact_type.setter
+    def contact_type(self, contact_type):
+        """Sets the contact_type of this TextContactAnnotation.
 
-        Date format (ISO 8601)  # noqa: E501
+        Type of contact information  # noqa: E501
 
-        :param date_format: The date_format of this TextDateAnnotation.
-        :type date_format: str
+        :param contact_type: The contact_type of this TextContactAnnotation.
+        :type contact_type: str
         """
+        allowed_values = ["email", "fax", "phone", "url", "other"]  # noqa: E501
+        if contact_type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `contact_type` ({0}), must be one of {1}"
+                .format(contact_type, allowed_values)
+            )
 
-        self._date_format = date_format
+        self._contact_type = contact_type
